# GraphsGen

./: CMakeLists.txt  README.md  drawgraph.c  drawgraph.h  grapsGen  loadingjsonfile.c  loadingjsonfile.h  main.c  plotgraph.c  plotgraph.h  test.json
